--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="numbers_title">Numbers</string>
+    <string name="colors_title">Colors</string>
+    <string name="family_title">Family</string>
+    <string name="phrases_title">Phrases</string>
 </resources>
